The player is now completely responsive.

--- a/src/main/resources/assets/minetunes/lang/en_US.lang
+++ b/src/main/resources/assets/minetunes/lang/en_US.lang
@@ -16,5 +16,6 @@ minetunes.player.chooser.filterMusic=Music (.mp3)
 # Dev Gui Text
 minetunes.guidev.clear=Clear Debug Output
 minetunes.guidev.chooser=Debug File Chooser
-minetunes.guidev.playMp3=Play an .mp3
+minetunes.guidev.playMp3=Play .mp3
+minetunes.guidev.playLast=Play Last .mp3
 minetunes.guidev.resetThread=Reset Thread
