--- a/src/main/resources/assets/minetunes/lang/en_US.lang
+++ b/src/main/resources/assets/minetunes/lang/en_US.lang
@@ -15,7 +15,8 @@ minetunes.player.chooser.filterMusic=Music (.mp3)
 
 # Dev Gui Text
 minetunes.guidev.clear=Clear Debug Output
+minetunes.guidev.resetThread=Reset Thread
 minetunes.guidev.chooser=Debug File Chooser
 minetunes.guidev.playMp3=Play .mp3
 minetunes.guidev.playLast=Play Last .mp3
-minetunes.guidev.resetThread=Reset Thread
+minetunes.guidev.playPause=Play/Pause
