--- a/src/main/resources/assets/minetunes/lang/zh_CN.lang
+++ b/src/main/resources/assets/minetunes/lang/zh_CN.lang
@@ -17,13 +17,13 @@ minetunes.gui.playMode0=播放模式: 顺序播放
 minetunes.gui.playMode1=播放模式: 列表循环
 minetunes.gui.playMode2=播放模式: 单曲循环
 minetunes.gui.playMode3=播放模式: 随机播放
-minetunes.gui.selectPlaylist=选择播放列表
+minetunes.gui.selectPlaylist=选择列表
 minetunes.gui.noPlaylists=无播放列表
 minetunes.gui.playlistName=列表名
 minetunes.gui.creatingPlaylist=创建播放列表
 minetunes.gui.delete=删除
 minetunes.gui.reload=刷新
-minetunes.gui.shiftToActivate=按Shift激活
+minetunes.gui.shiftToActivate=按住Shift进行选择
 minetunes.gui.playlistCreator=列表创建人
 minetunes.gui.clickToSet=左键选定位置
 minetunes.gui.escapeToReset=按空格键归位
